# to-anki

./: .gitignore  LICENSE  README.md  drone.py  fcc-amateur-radio.py  pyproject.toml
